--- a/Rentivo/src/main/resources/application.properties
+++ b/Rentivo/src/main/resources/application.properties
@@ -3,13 +3,14 @@ spring.application.name=Rentivo
 # Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/rentalcar
 spring.datasource.username=root
-spring.datasource.password=Reddysai@21
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=1212
+spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data.sql
+spring.jpa.defer-datasource-initialization=true
+
 # Logging
 logging.level.org.springframework.security=DEBUG
-
 
 # SMTP
 spring.mail.host=smtp.gmail.com
