--- a/Rentivo/src/main/resources/application.properties
+++ b/Rentivo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=Rentivo
 spring.datasource.url=jdbc:mysql://localhost:3306/rentalcar
 spring.datasource.username=root
 spring.datasource.password=1212
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data.sql
 spring.jpa.defer-datasource-initialization=true
@@ -16,7 +16,7 @@ logging.level.org.springframework.security=DEBUG
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=rentivo.team@gmail.com
-spring.mail.password=gnnw cevt wyry bsce
+spring.mail.password=cdxb hexu siuw fbph
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
