--- a/Rentivo/src/main/resources/application.properties
+++ b/Rentivo/src/main/resources/application.properties
@@ -1,22 +1,26 @@
 spring.application.name=Rentivo
 
-# Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/rentalcar
-spring.datasource.username=root
-spring.datasource.password=1212
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:data.sql
-spring.jpa.defer-datasource-initialization=true
+app.images.dir=${IMAGES_DIR:uploads}
 
-# Logging
-logging.level.org.springframework.security=DEBUG
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/rentivo}
+spring.datasource.username=${DB_USERNAME:rentivo}
+spring.datasource.password=${DB_PASSWORD:rentivo}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=none
+
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
+
 
 # SMTP
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=rentivo.team@gmail.com
-spring.mail.password=cdxb hexu siuw fbph
+spring.mail.password=xxxx xxxx xxxx xxxx
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -26,4 +30,3 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Port
 server.port=8080
-
